Fix spacing in devTools (right hand panel) menu bar (around the logo)

--- a/assets/css/browser-solidity.css
+++ b/assets/css/browser-solidity.css
@@ -60,7 +60,8 @@
     float: right;
     height: 90%;
     background-color: white;
-    padding-right: 1%;
+    padding-right: 5%;
+    padding-left: 5%;
 }
 
 #righthand-panel #menu {
